# tiny_quadruped

./: README.md
dynamic_tutorials/: CMakeLists.txt  package.xml
dynamic_tutorials/cfg/: Tutorials.cfg
installation/: install_deps.bash
startup_scripts/: setup_tmux.bash  tmux_start.bash
startup_scripts/tmuxinator/: tq_start_sim.yml
tinyquad_control/: CMakeLists.txt  package.xml
tinyquad_control/config/: tinyquad_control.yaml  tinyquad_wheel_control.yaml
tinyquad_controller/: platformio.ini
tinyquad_controller/src/: AxisController.cpp  (+3 more)
tinyquad_description/: CMakeLists.txt  README.md  package.xml
tinyquad_planner/: CMakeLists.txt  package.xml
tinyquad_planner/config/: bezier_params.yaml  body_params.yaml
tinyquad_planner/launch/: bezier.launch  body_start.launch  ik_test.launch  start.launch  test_ik.launch  visualize.launch
tinyquad_planner/rviz/: bezier.rviz
tinyquad_planner/scripts/: bezier_matrix.py
tinyquad_planner/scripts/3d_plotter/: leg_kinematics_plot.py
tinyquad_planner/src/: BodyKinematics_node.cpp  SimpleGait_node.cpp  bezier_generator.cpp  bezier_generator.hpp  bezier_node.cpp  legKinematics.cpp  legKinematics.hpp  legKinematics_node.cpp  main.cpp  tinyquad_ik_test.cpp
tinyquad_planner/src/bezier_generator/: bezier_generator.cpp  bezier_generator.hpp
tinyquad_planner/src/body_kinematics/: BodyKinematics.cpp  BodyKinematics.hpp
tinyquad_planner/src/gait_generator/: SimpleGait.cpp  SimpleGait.hpp
tinyquad_planner/src/legKinematics/: legKinematics.cpp  legKinematics.hpp
tinyquad_planner/src/leg_kinematics_test/: leg_kinemtics_test.cpp  leg_kinemtics_test_node
tinyquad_urdf/: CMakeLists.txt  package.xml
tinyquad_utility/: CMakeLists.txt  package.xml
(+42 files in other folders)
